--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "keywords": [
+  ],
   "engines": {
     "node": "14.3.0"
   },
